--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,16 +1,34 @@
-# The Docker image that will be used to build your app
-image: python:3.12
-# Functions that should be executed before the build script is run
-before_script: []
-pages:
+
+
+image: python:3.9
+
+stages:
+  - deploy
+  - pages
+
+deploy_job:
+  stage: deploy
   script:
-    - pip install mkdocs mkdocs-material
-    - mkdocs build --clean
+    - pip install mkdocs
+    - pip install mkdocs-material
+    - mkdocs build
+    - mkdir .public
+    - cp -r site/* .public
+    - ls -la .public  # 列出 .public 目錄的內容
+    - mv .public public
   artifacts:
     paths:
-      # The folder that contains the files to be exposed at the Page URL
       - public
-  rules:
-    # This ensures that only pushes to the default branch will trigger
-    # a pages deploy
-    - if: $CI_COMMIT_REF_NAME == $CI_DEFAULT_BRANCH
+
+pages:
+  stage: pages
+  script:
+    - echo "Using public directory for pages"
+    - ls -la public  # 列出 public 目錄的內容
+  dependencies:
+    - deploy_job
+  artifacts:
+    paths:
+      - public
+  only:
+    - main
