--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 # Project information
-site_name: 小艾的 MkDocs 網站
+site_name: 小艾的 MkDocs 網站 測試123
 # 之後修改成Gitlab page的網址
 site_url: http://127.0.0.1:8000/
 site_author: Selene Ai
