--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,7 +3,7 @@ site_name: 小艾的 MkDocs 網站
 # 之後修改成Gitlab page的網址
 site_url: https://test-hannah2400214-ef491c3dd4eaf78a970e206fc5e458d3e166d011e109.gitlab.io
 site_author: Selene Ai
-site_description: 練習使用 Markdown ，來記錄目前所學的前端技術與相關的知識，邁向程式的偉大航道～
+site_description: 練習使用 Markdown ，來記錄目前所學的前端技術與相關知識，邁向程式的偉大航道～
 
 # Repository
 repo_name: SeleneAi499123/MkDocs
