--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -182,6 +182,11 @@ nav:
     - Template form: form/template-form.md
     - Web api: form/web-api.md
     - Entity framwork: form/entity-framwork.md
+  
+  - Git: 
+    - Git: git/git.md
+    - Git push to multi repo: git/git-remote-multi-repo.md
+    - Add new SSH Key: git/ssh-key.md 
     
 
 
