--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,5 @@
 # Project information
 site_name: 小艾的 MkDocs 網站
-# 之後修改成Gitlab page的網址
 site_url: https://test-hannah2400214-ef491c3dd4eaf78a970e206fc5e458d3e166d011e109.gitlab.io
 site_author: Selene Ai
 site_description: 練習使用 Markdown ，來記錄目前所學的前端技術與相關知識，邁向程式的偉大航道～
@@ -13,6 +12,7 @@ edit_uri: edit/main/docs/
 # Configuration
 theme:
   name: material
+  # custom
   custom_dir: material/overrides
   features:
     - announce.dismiss
@@ -28,10 +28,8 @@ theme:
     # - navigation.expand
     - navigation.footer
     # - navigation.indexes
-
     - navigation.instant
     - navigation.instant.preview
-
     # - navigation.instant.prefetch
     # - navigation.instant.progress
     # - navigation.prune
@@ -76,7 +74,7 @@ plugins:
   # - minify:
   #     minify_html: true
 
-# # Hooks
+# Hooks
 hooks:
   # - material/overrides/hooks/shortcodes.py
   - material/overrides/hooks/translations.py
@@ -161,9 +159,6 @@ nav:
       - Route: route/route.md
       - Navigation style: route/navstyle.md
       - Parameter passing: route/param.md
-    
-      
-    
 
   - Components: 
     - Component: component/component.md
@@ -177,7 +172,6 @@ nav:
       - Dependency Injection : service/di.md
       - Http Client: service/httpclient.md
 
-
   - Form:
     - Reactive form: form/reactive-form.md
     - Template form: form/template-form.md
@@ -189,8 +183,6 @@ nav:
     - Git push to multi repo: git/git-remote-multi-repo.md
     - Add new SSH Key: git/ssh-key.md 
     - Gitlab flow: git/gitlab-flow.md
-    
-
 
   - Learn more:
     - MkDocs material: more/material.md
