--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,7 +2,7 @@
 site_name: 小艾的 MkDocs 網站
 site_url: https://test-hannah2400214-ef491c3dd4eaf78a970e206fc5e458d3e166d011e109.gitlab.io
 site_author: Selene Ai
-site_description: 練習使用 Markdown ，來記錄目前所學的前端技術與相關知識，邁向程式的偉大航道～
+site_description: 使用 Markdown 記錄目前所學的前端技術與相關知識，邁向程式的偉大航道～
 
 # Repository
 repo_name: SeleneAi499123/my-mkdocs-website
@@ -61,8 +61,8 @@ theme:
   font:
     text: Roboto
     code: Roboto Mono
-  logo: assets/angular.png
-  favicon: assets/angular.png
+  logo: assets/unicat.png
+  favicon: assets/unicat.png
   icon:
     annotation: material/plus-circle-outline
 
@@ -90,13 +90,14 @@ extra:
   social:
     - icon: fontawesome/brands/github
       link: https://github.com/SeleneAi499123
+  
 
 extra_css:
   - stylesheets/extra.css
 
 # 將超連結改為 _blank
 extra_javascript:
-  - 'custom.js'
+  - 'javascripts/custom.js'
 
 # Extensions
 markdown_extensions:
@@ -154,11 +155,11 @@ nav:
   - Home: index.md
   - Getting started:
     - Installation: getting-started.md
-    - Create a new project: create.md
+    - 建立 Angular 專案: create.md
     - Route: 
-      - What is route: route/route.md
+      - Route 可以做什麼: route/route.md
       - Navigation style: route/navstyle.md
-      - Parameter passing: route/param.md
+      - 參數的傳遞: route/param.md
 
   - Components: 
     - Component: component/component.md
